# learn_OLD

./: .gitignore  .gitmodules  aaa  ab  echo  gitclean.sh
books/alg/: benchmark.pl  script.pl
books/c/: a.out  cel.c  count_spaces.c  count_str.c  fat  fat.c  fatv2.c  fatv3.c  get-putchar.c  get-putchar.v2.c  hello  longest-80-characters  longest-str.v2  longest-str.v2.c  print_histogram.v1  print_histogram.v2  print_histogram.v3  print_in_new_line.c  replace_symbols.c
books/c/1/: a.out  (+7 more)
docker/: cAdvisor.txt
docker/OLD/: cAdvisor.txt
docker/etcd1/: consul1.sh
docker/etcd2/: consul2.sh
ermin/book/: foodball_er.erwin
ermin/tutorial/: test1.erwin
ffmpeg/script_for_drum/: script.pl
git/: text.txt
js/Basic/: index.html
perl/: check_and.pl
perl/debug/: script.pl
perl/sms-parser/: script.pl
perl/telegram_bot/: bad.txt  proxy.pl  script.pl  success.txt
perl/yaml/: test.yml
python/: HakerRank.py  pyproject.toml  tmp.py
python/book-fluent-python/: cards.py  ex_deque.py  ex_uuid.py  list_of_list.py  listcomps.py  nametuple.py  slice.py  sort_and_sorted.py  test_array.py  tuples.py  vector_example.py
python/poetry/rp-hello/: pyproject.toml  requirements.txt
python/poetry/rp-poetry/: pyproject.toml  requirements.txt
siege/: my.txt  script.sh
timescaledb/: filial.monitoring.time.sql  insert.pl  stat.audios.gen.sql  stat.audios.gen.time.sql  stat.filial_activity.gen.time.sql
timescaledb/MyApp/: myapp.yml
vagrant/: Vagrantfile
vagrant/bento-ubuntu-16.04/: Vagrantfile
vagrant/hello-calatyst/: Dockerfile
vagrant/identijenk/: Dockerfile
(+180 files in other folders)
